Fixes padding issue on Small screens

--- a/_sass/layouts/_home.scss
+++ b/_sass/layouts/_home.scss
@@ -133,6 +133,7 @@
 
    @media only screen and (max-width: $breakpointSmall) {
       flex-direction: column;
+      padding-bottom: 40px;
    }
 }
 
